--- a/dantex/index.html
+++ b/dantex/index.html
@@ -58,11 +58,11 @@
             <p>Szkoda, że się rozstajemy. Mamy do Ciebie drobną prośbę.</p>
             <p>Twoja opinia jest bardzo cenna, żeby ulepszyć nasz produkt.<br>Dlatego prosimy o uzupełnienie tej <span class="bold">ankiety:</span></p>
             <form action="form.php" method="post">
-                <input type="radio" name="gender" value="male">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.<br>
-                <input type="radio" name="" value="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit<br>
-                <input type="radio" name="" value="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit<br>
-                <input type="radio" name="" value="" checked>Inna odpowiedź<br>
-                <textarea maxlength="1000"></textarea><br>
+                <input id="answer1" type="radio" name="answer" value="" class="radio-input"><label class="radio-btn" for="answer1" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                <input id="answer2" type="radio" name="answer" value="" class="radio-input"><label class="radio-btn" for="answer2" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                <input id="answer3" type="radio" name="answer" value="" class="radio-input"><label class="radio-btn" for="answer3" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                <input id="answer4" type="radio" name="answer" value="" class="radio-input"><label class="radio-btn" for="answer4" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                <textarea maxlength="1000"></textarea>
                 <button id="send" class="button btn-red long-button">WYŚLIJ I WYPISZ MNIE Z NEWSLETTERA</button>
                 <br>
             </form>
