--- a/dantex/index.html
+++ b/dantex/index.html
@@ -60,7 +60,7 @@
             <form action="form.php" method="post">
                 <div class="label-style">
                    <input id="answer1" type="radio" name="answer" value="" class="radio-input">
-                    <label class="radio-btn" for="answer1" id=""></label><span class="label-style-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem esse similique blanditiis recusandae quia, quo, facilis aliquam consequatur, nulla praesentium, eius sit. Ad, excepturi incidunt accusamus laboriosam ab quis eos asperiores, quae libero modi facere quasi aut.</span>
+                    <label class="radio-btn" for="answer1" id="first-label"></label>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem esse similique blanditiis recusandae quia, quo, facilis aliquam consequatur, nulla praesentium, eius sit. Ad, excepturi incidunt accusamus laboriosam ab quis eos asperiores, quae libero modi facere quasi aut.
                     </div>
                 <div class="label-style">
                    <input id="answer2" type="radio" name="answer" value="" class="radio-input">
@@ -70,9 +70,9 @@
                    <label class="radio-btn" for="answer3" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</div>
                 <div class="label-style">
                     <input id="answer4" type="radio" name="answer" value="" class="radio-input">
-                    <label class="radio-btn" for="answer4" id="" class="last-lebel"></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                    <label class="radio-btn" for="answer4" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                    <textarea maxlength="1000"></textarea>
                 </div>
-                <textarea maxlength="1000"></textarea>
                 <button id="send" class="button btn-red long-button">WYŚLIJ I WYPISZ MNIE Z NEWSLETTERA</button>
                 <br>
             </form>
