--- a/dantex/index.html
+++ b/dantex/index.html
@@ -6,6 +6,7 @@
     <title>Rezygnacja z newslettera</title>
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,500" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive-mobile.css">
 
@@ -21,23 +22,23 @@
     <div id="content">
         <div id="content-inner" class="first">
             <section id="main-info">
-                <p>Czy chcesz zrezygnować z newslettera?</p>
-                <p>Pamiętaj, że subskrybcja ma swoje zalety:</p>
+                <h1>Czy chcesz zrezygnować z newslettera?</h1>
+                <p class="lead">Pamiętaj, że subskrybcja ma swoje zalety:</p>
             </section>
             <section id="icon">
                 <figure id="first-icon">
                     <img src="img/newsletter.svg" class="icons" alt="naewsletter">
-                    <h1>Header One</h1>
+                    <h2>Header One</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
                 </figure>
                 <figure id="second-icon">
                     <img src="img/mobile-phone.svg" class="icons" alt="mobile-phone">
-                    <h1>Header Two</h1>
+                    <h2>Header Two</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
                 </figure>
                 <figure id="third-icon">
                     <img src="img/investment.svg" class="icons" alt="investment">
-                    <h1>Header Three</h1>
+                    <h2>Header Three</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
                 </figure>
             </section>
@@ -50,13 +51,13 @@
             </section>
         </div>
         <section id="accept" class="first">
-            <p>Dziękujemy za zaufanie!</p>
-            <p>Mamy nadzieję, że nasze e-maile przyniosą Ci nowe korzyści.</p>
-            <button id="" class="button btn-return btn-red">WRÓĆ</button>
+            <h1>Dziękujemy za zaufanie!</h1>
+            <p class="lead">Mamy nadzieję, że nasze e-maile przyniosą Ci nowe korzyści.</p>
+<!--            <button id="" class="button btn-return btn-red">WRÓĆ</button>-->
         </section>
         <section id="form-section" class="first">
-            <p>Szkoda, że się rozstajemy. Mamy do Ciebie drobną prośbę.</p>
-            <p>Twoja opinia jest bardzo cenna, żeby ulepszyć nasz produkt.<br>Dlatego prosimy o uzupełnienie tej <span class="bold">ankiety:</span></p>
+            <h1>Szkoda, że się rozstajemy. Mamy do Ciebie drobną prośbę.</h1>
+            <p class="lead">Twoja opinia jest bardzo cenna, żeby ulepszyć nasz produkt.<br>Dlatego prosimy o uzupełnienie tej <span class="bold">ankiety:</span></p>
             <form action="form.php" method="post">
                 <div class="label-style">
                    <input id="answer1" type="radio" name="answer" value="" class="radio-input">
@@ -74,16 +75,14 @@
                     <textarea maxlength="1000"></textarea>
                 </div>
                 <button id="send" class="button btn-red long-button">WYŚLIJ I WYPISZ MNIE Z NEWSLETTERA</button>
-                <br>
             </form>
         </section>
         <section id="resignation" class="first">
-            <p>Zostałeś pomyślnie wypisany z naszej listy subskrybcyjnej</p>
-            <p>Dziękujemy za Twój czas i mamy nadzieję, że spotkamy się w przyszłości</p>
-            <button class="button btn-return btn-red">WRÓĆ</button>
+            <h1>Zostałeś pomyślnie wypisany z naszej listy subskrybcyjnej</h1>
+            <p class="lead">Dziękujemy za Twój czas i mamy nadzieję, że spotkamy się w przyszłości</p>
+<!--            <button class="button btn-return btn-red">WRÓĆ</button>-->
         </section>
     </div>
-
     <footer>
         <p>Copyright © 2018</p>
     </footer>
