--- a/szablon1/index.html
+++ b/szablon1/index.html
@@ -45,10 +45,12 @@
                 </div>
             </nav>
             <div id="name">
-                <hr>
                 <h1>PAUL LAPKIN</h1>
-                <hr>
-                <p>#User Experience #Music #Creative Direction</p>
+                <ul>
+                    <li>#User Experience</li>
+                    <li>#Music</li>
+                    <li>#Creative Direction</li>
+                </ul>  
             </div>
         </div>
     </header>
