--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -20,10 +20,9 @@
 
         <!-- Nav tabs -->
         <div id="logandreg">
-            <reg></reg>
             <ul class="nav nav-tabs" role="tablist" id="myTabs">
                 <li role="presentation" class="active text-uppercase"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
-                <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj się</a></li>
+                <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -52,7 +51,7 @@
                             <button type="submit" class="btn" id="btn-log">ZALOGUJ SIĘ</button>
                         </div>
                         <div class="form-group">
-                            <button type="button" class="btn" id="btn-remind">Nie pamiętasz hasła?</button>
+                            <a href="#remind" id="btn-remind">Nie pamiętasz hasła?</a>
                         </div>
                     </form>
 
