--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="form-group">
                             <label for="fax" class="sr-only"></label>
-                            <input class="form-control" type="number" id="fax" placeholder="Fax">
+                            <input class="form-control" type="text" id="fax" placeholder="Fax">
                         </div>
                         <div class="form-group">
                             <label for="website" class="sr-only"></label>
